feat: handle rfh header and test dql with jms body disabled
Signed-off-by: Joel Hanson <joelhanson025@gmail.com>